<resources>
    <string name="app_name">WarGoose</string>
    <string name="start_act_text_head">Бойовий гусак із біолабораторій України
готовий нанести «свєрх-трататата» по ворожим об’єктам</string>
    <string name="header_main">Оберіть одну з чотирьох позицій</string>
    <string name="message_main">Гусак атакує обрану позицію
зброєю високоточного влучання</string>
    <string name="na_moskow">На мацкву</string>
    <string name="na_lukasha">На чик-чирика</string>
    <string name="na_bunker">На бункер</string>
    <string name="na_rubl">На курс рубля</string>

    <string name="slava_ukraine">Слава Україні!</string>
    <string name="goose_map">Карта запусків гуся по позиціям</string>
    <string name="sucsessfull_goose">Ваш гусак успішно запущений</string>
    <string name="wait_for_bam">Очікуйте гучного «свєрх-тратата»
        по позиції найближчим часом</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Bottoms -->
    <string name="start_goose">Запустити гуся</string>
    <string name="look_map">Переглянути карту</string>
    <string name="choose_position">Обрати позицію</string>
    <string name="choose_new_position">Обрати нову позицію</string>


</resources>